bk_ida/gccida/g2/ggc_alloc
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ggc_alloc/src/ggc-page.c:1324:1: error: unknown type name 'page_entry_0'; did you mean 'page_entry'?
page_entry_0 *v5; // r12 
^~~~~~~~~~~~
page_entry
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ggc_alloc/src/ggc-page.c:249:3: note: 'page_entry' declared here
} page_entry;
  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ggc_alloc/src/ggc-page.c:1332:1: error: unknown type name 'page_entry_0'; did you mean 'page_entry'?
page_entry_0 *v13; // rbp 
^~~~~~~~~~~~
page_entry
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ggc_alloc/src/ggc-page.c:249:3: note: 'page_entry' declared here
} page_entry;
  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ggc_alloc/src/ggc-page.c:1334:1: error: unknown type name 'page_entry_0'; did you mean 'page_entry'?
page_entry_0 *next; // rax 
^~~~~~~~~~~~
page_entry
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ggc_alloc/src/ggc-page.c:249:3: note: 'page_entry' declared here
} page_entry;
  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ggc_alloc/src/ggc-page.c:1335:1: error: unknown type name 'page_entry_0'; did you mean 'page_entry'?
page_entry_0 *v16; // rax 
^~~~~~~~~~~~
page_entry
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ggc_alloc/src/ggc-page.c:249:3: note: 'page_entry' declared here
} page_entry;
  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ggc_alloc/src/ggc-page.c:1340:1: error: unknown type name 'page_entry_0'; did you mean 'page_entry'?
page_entry_0 *free_pages; // rax 
^~~~~~~~~~~~
page_entry
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ggc_alloc/src/ggc-page.c:249:3: note: 'page_entry' declared here
} page_entry;
  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ggc_alloc/src/ggc-page.c:1341:1: error: unknown type name 'page_entry_0'; did you mean 'page_entry'?
page_entry_0 *v23; // r9 
^~~~~~~~~~~~
page_entry
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ggc_alloc/src/ggc-page.c:249:3: note: 'page_entry' declared here
} page_entry;
  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ggc_alloc/src/ggc-page.c:1343:1: error: unknown type name 'page_group_0'; did you mean 'page_group'?
page_group_0 *v25; // r9 
^~~~~~~~~~~~
page_group
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ggc_alloc/src/ggc-page.c:267:3: note: 'page_group' declared here
} page_group;
  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ggc_alloc/src/ggc-page.c:1345:1: error: unknown type name 'page_entry_0'; did you mean 'page_entry'?
page_entry_0 *v27; // rax 
^~~~~~~~~~~~
page_entry
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ggc_alloc/src/ggc-page.c:249:3: note: 'page_entry' declared here
} page_entry;
  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ggc_alloc/src/ggc-page.c:1362:1: error: unknown type name 'page_group_0'; did you mean 'page_group'?
page_group_0 *v44; // rdi 
^~~~~~~~~~~~
page_group
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ggc_alloc/src/ggc-page.c:267:3: note: 'page_group' declared here
} page_group;
  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ggc_alloc/src/ggc-page.c:1363:1: error: unknown type name 'page_group_0'; did you mean 'page_group'?
page_group_0 *page_groups; // rbp 
^~~~~~~~~~~~
page_group
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ggc_alloc/src/ggc-page.c:267:3: note: 'page_group' declared here
} page_group;
  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ggc_alloc/src/ggc-page.c:1364:1: error: unknown type name 'page_entry_0'; did you mean 'page_entry'?
page_entry_0 *v46; // rax 
^~~~~~~~~~~~
page_entry
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ggc_alloc/src/ggc-page.c:249:3: note: 'page_entry' declared here
} page_entry;
  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ggc_alloc/src/ggc-page.c:1365:1: error: use of undeclared identifier 'page_group_0'; did you mean 'page_groups'?
page_group_0 *v47; // r12 
^~~~~~~~~~~~
page_groups
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ggc_alloc/src/ggc-page.c:1363:15: note: 'page_groups' declared here
page_group_0 *page_groups; // rbp 
              ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ggc_alloc/src/ggc-page.c:1365:15: error: use of undeclared identifier 'v47'
page_group_0 *v47; // r12 
              ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ggc_alloc/src/ggc-page.c:1408:28: error: subscripted value is not an array, pointer, or vector
v2 = *(long long *)0x95F098[v1]; 
                   ~~~~~~~~^~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ggc_alloc/src/ggc-page.c:1476:23: error: expected expression
v23 = ( page_entry_0 *)( &G + 2640); 
                      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ggc_alloc/src/ggc-page.c:1476:9: error: use of undeclared identifier 'page_entry_0'
v23 = ( page_entry_0 *)( &G + 2640); 
        ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ggc_alloc/src/ggc-page.c:1502:23: error: expected expression
v25 = ( page_group_0 *)entrya; 
                      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ggc_alloc/src/ggc-page.c:1502:9: error: use of undeclared identifier 'page_group_0'
v25 = ( page_group_0 *)entrya; 
        ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ggc_alloc/src/ggc-page.c:1539:23: error: expected expression
v25 = ( page_group_0 *)&v36[v40 - v43]; 
                      ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ggc_alloc/src/obj/ggc-page.o] Error 1
